--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 contourpy==1.3.0
 cycler==0.12.1
 distro==1.9.0
+dj-database-url==3.0.1
 Django==4.2.27
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
@@ -16,6 +17,7 @@ drf-yasg==1.21.14
 exceptiongroup==1.3.1
 Flask==3.1.2
 fonttools==4.60.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -46,6 +48,7 @@ ormsgpack==1.11.0
 packaging==23.2
 pandas==2.3.3
 pillow==11.3.0
+psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic_core==2.41.5
 pygame==2.5.2
@@ -69,6 +72,7 @@ tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.4
+whitenoise==6.11.0
 xxhash==3.6.0
 zipp==3.23.0
 zstandard==0.25.0
